Working on MS text.
Exploring Bayesian models.

--- a/Leader2.bib
+++ b/Leader2.bib
@@ -9,6 +9,22 @@
     number = {890},
     url = {http://arxiv.org/abs/1510.06112},
   }
+  
+
+@article{pietraszewski_evolution_2019,
+	title = {The evolution of leadership: {Leadership} and followership as a solution to the problem of creating and executing successful coordination and cooperation enterprises},
+	issn = {1048-9843},
+	shorttitle = {The evolution of leadership},
+	url = {http://www.sciencedirect.com/science/article/pii/S1048984318302765},
+	doi = {10.1016/j.leaqua.2019.05.006},
+	abstract = {This paper proposes that leadership and followership are not just evolved solutions to the problem of coordinating what to do once a group exists. Rather, leadership and followership also solve the problem of creating a group in the first place. Creating a group is a problem of meta-coordination: coordinating with others about what to coordinate about. Of all possible bases for coordinating or cooperating, only a tiny fraction will be embraced by others, and smaller fraction still will be successfully implemented and executed. No one individual has enough information to solve this problem on one's own. Leadership and followership solve this problem by creating a social marketplace, in which leaders propose possible coordination and cooperation enterprises, and followers evaluate and choose among these offered possibilities. This marketplace—in which different individuals propose and evaluate different coordination and cooperation enterprises—solves the problem of meta-coordination by exposing possible enterprises to the broader social market, which serves as a selective or culling regime. Leadership and followership are evolved information-processing roles within this social marketplace. Consequently, understanding the evolutionary psychology of leadership and followership requires understanding the challenges and opportunities inherent in this market dynamic. The present paper analyzes the tasks that must be carried out to successfully navigate this dynamic. This task analysis predicts a number of novel information-processing functions for the roles of leadership and followership, and suggests that leadership and followership are a broader set of phenomena than currently conceptualized. This broadened conceptualization has a number of important implications for future research, and suggests that leadership and followership may have played a more central role in the evolution of human coordination and cooperation than has been appreciated.},
+	urldate = {2019-06-19},
+	journal = {The Leadership Quarterly},
+	author = {Pietraszewski, David},
+	month = jun,
+	year = {2019},
+	keywords = {Cooperation, Leadership, Evolutionary Psychology, Coordination, Followership}
+}  
 
 @article{dukas_animal_2018,
 	title = {Animal expertise: mechanisms, ecology and evolution},
@@ -1085,7 +1101,7 @@ This article is part of the theme issue ‘Interdisciplinary approaches for unco
 	number = {1},
 	urldate = {2018-09-23},
 	journal = {The Leadership Quarterly},
-	author = {Garfield, Zachary H. and von Rueden, Christopher and Hagen, Edward H.},
+	author = {Garfield, Zachary H. and {von Rueden}, Christopher and Hagen, Edward H.},
 	year = {2019},
 	pages = {59--80},
 	file = {Garfield et al. - 2018 - The evolutionary anthropology of political leaders.pdf:/Users/zgarf/Zotero/storage/LL4UQW6V/Garfield et al. - 2018 - The evolutionary anthropology of political leaders.pdf:application/pdf;ScienceDirect Snapshot:/Users/zgarf/Zotero/storage/JSNQWR4G/S1048984317301376.html:text/html}
@@ -2373,7 +2389,7 @@ This article is part of the theme issue ‘Interdisciplinary approaches for unco
 @article{von_rueden_mens_2016,
 	title = {Mens status and reproductive success in 33 nonindustrial societies: {Effects} of subsistence, marriage system, and reproductive strategy},
 	journal = {Proceedings of the National Academy of Sciences},
-	author = {von Rueden, Christopher and Jaeggi, Adrian V.},
+	author = {{von Rueden}, Christopher and Jaeggi, Adrian V.},
 	year = {2016},
 	keywords = {Reproductive success, Status, MA\_leadership, Leadership, asf},
 	pages = {201606800},
@@ -2384,7 +2400,7 @@ This article is part of the theme issue ‘Interdisciplinary approaches for unco
 	title = {The roots and fruits of social status in small-scale human societies},
 	booktitle = {The psychology of social status},
 	publisher = {Springer},
-	author = {Von Rueden, Christopher},
+	author = {{von Rueden}, Christopher},
 	editor = {Cheng, Joey T. and Tracy, Jessica L. and Anderson, Cameron},
 	year = {2014},
 	keywords = {Leadership},
@@ -3882,7 +3898,7 @@ This article is part of the theme issue ‘Interdisciplinary approaches for unco
 	title = {Hunting, social status and biological fitness},
 	volume = {53},
 	journal = {Biodemography and Social Biology},
-	author = {Gurven, Michael and von Rueden, Christopher R.},
+	author = {Gurven, Michael and {von Rueden}, Christopher R.},
 	year = {2006},
 	keywords = {Advisor???, Africa, HBE, MA\_leadership, Show off hypothesis, Show Off Hypothesis, UCARE 1, Zach's ANTH 412 paper, Zach's PCA, Zach's UCARE 1},
 	pages = {81--99}
@@ -6213,7 +6229,7 @@ This article is part of the theme issue ‘Interdisciplinary approaches for unco
 	doi = {10.1016/j.evolhumbehav.2008.05.001},
 	number = {6},
 	journal = {Evolution and Human Behavior},
-	author = {von Rueden, Christopher R. and Gurven, Michael and Kaplan, H.},
+	author = {{von Rueden}, Christopher R. and Gurven, Michael and Kaplan, H.},
 	year = {2008},
 	keywords = {HBE, MA\_leadership, Status, Zach's UCARE 1},
 	pages = {402--415},
@@ -6225,7 +6241,7 @@ This article is part of the theme issue ‘Interdisciplinary approaches for unco
 	volume = {278},
 	number = {1715},
 	journal = {Proceedings of the Royal Society B: Biological Sciences},
-	author = {von Rueden, Christopher R. and Gurven, Michael and Kaplan, H.},
+	author = {{von Rueden}, Christopher R. and Gurven, Michael and Kaplan, H.},
 	year = {2010},
 	keywords = {HBE, MA\_leadership, Prestige / Dominance},
 	pages = {2223--2232},
@@ -6238,7 +6254,7 @@ This article is part of the theme issue ‘Interdisciplinary approaches for unco
 	doi = {10.1007/s12110-014-9213-4},
 	abstract = {Leadership is instrumental to resolution of collective action dilemmas, particularly in large, heterogeneous groups. Less is known about the characteristics or effectiveness of leadership in small-scale, homogeneous, and relatively egalitarian societies, in which humans have spent most of our existence. Among Tsimane' forager-horticulturalists of Bolivia, we (1) assess traits of elected leaders under experimental and naturalistic conditions and (2) test whether leaders impact or differentially benefit from collective action outcomes. We find that elected leaders are physically strong and have more kin and other exchange partners. Their ranks on physical dominance, kin support, and trustworthiness predict how well their groups perform, but only where group members have a history of collaborative interaction. Leaders do not take more of the spoils. We discuss why physically strong leaders can be compatible with egalitarianism, and we suggest that leaders in egalitarian societies may be more motivated by maintaining an altruistic reputation than by short-term rewards of collective action},
 	journal = {Hum Nat},
-	author = {von Rueden, Christopher R. and Gurven, Michael and Kaplan, Hillard and Stieglitz, Jonathan},
+	author = {{von Rueden}, Christopher R. and Gurven, Michael and Kaplan, Hillard and Stieglitz, Jonathan},
 	year = {2014},
 	keywords = {Ethnography/Egalitarianism, Jepson, Leadership - general, MA\_leadership, NSF1, prelims},
 	file = {Leadership%20in%20an%20Egalitarian%20S:/Users/hagen/Zotero/storage/RQUVCR9Y/Leadership in an Egalitarian S.pdf:application/pdf}
@@ -6252,7 +6268,7 @@ This article is part of the theme issue ‘Interdisciplinary approaches for unco
 	abstract = {BACKGROUND AND OBJECTIVES: Low social status increases risk of disease due, in part, to the psychosocial stress that accompanies feeling subordinate or poor. Previous studies report that chronic stress and chronically elevated cortisol can impair cardiovascular and immune function. We test whether lower status is more benign in small-scale, relatively egalitarian societies, where leaders lack coercive authority and there is minimal material wealth to contest. METHODOLOGY: Among Tsimane' forager-horticulturalists of lowland Bolivia, we compare informal political influence among men with urinary cortisol, immune activation (innate and acquired), and morbidity as assessed during routine medical exams. RESULTS: After controlling for potential confounds, we find that politically influential men have lower cortisol, and that this association is partly attributable to access to social support. Cortisol is positively associated with men's income, which may reflect chronic psychosocial stress from market involvement. Greater influence is also associated with lower probability of respiratory infection, which is a frequent source of morbidity among Tsimane'. Among men who lost influence over a 4-year period, cortisol and probability of respiratory infection were higher the greater the decline in influence. CONCLUSIONS AND IMPLICATIONS: Deleterious effects of low status on health are not merely 'diseases of civilization' but may result from how (even subtle) status differences structure human behavior},
 	number = {1},
 	journal = {Evol Med Public Health},
-	author = {von Rueden, Christopher R. and Trumble, Benjamin C. and Emery Thompson, Melissa and Stieglitz, Jonathan and Hooper, Paul L. and Blackwell, Aaron D. and Kaplan, Hillard S. and Gurven, Michael},
+	author = {{von Rueden}, Christopher R. and Trumble, Benjamin C. and Emery Thompson, Melissa and Stieglitz, Jonathan and Hooper, Paul L. and Blackwell, Aaron D. and Kaplan, Hillard S. and Gurven, Michael},
 	year = {2014},
 	pmcid = {PMC4178369},
 	keywords = {Hormones/DNA, Leadership - general, MA\_leadership, Physical traits},
@@ -6527,7 +6543,7 @@ This article is part of the theme issue ‘Interdisciplinary approaches for unco
 @article{von_rueden_mens_2016-1,
 	title = {Men's status and reproductive success in 33 nonindustrial societies: {Effects} of subsistence, marriage system, and reproductive strategy},
 	journal = {Proceedings of the National Academy of Sciences},
-	author = {von Rueden, Christopher R. and Jaeggi, Adrian V.},
+	author = {{von Rueden}, Christopher R. and Jaeggi, Adrian V.},
 	year = {2016},
 	keywords = {asf, Leadership, MA\_leadership, Reproductive success, Status},
 	pages = {201606800}
@@ -6850,7 +6866,7 @@ This article is part of the theme issue ‘Interdisciplinary approaches for unco
 	abstract = {Models of collective action infrequently account for differences across individuals beyond a limited set of strategies, ignoring variation in endowment (e.g. physical condition, wealth, knowledge, personality, support), individual costs of effort, or expected gains from cooperation. However, behavioural research indicates these inter-individual differences can have significant effects on the dynamics of collective action. The papers contributed to this theme issue evaluate how individual differences affect the propensity to cooperate, and how they can catalyse others' likelihood of cooperation (e.g. via leadership). Many of the papers emphasize the relationship between individual decisions and socio-ecological context, particularly the effect of group size. All together, the papers in this theme issue provide a more complete picture of collective action, by embracing the reality of inter-individual variation and its multiple roles in the success or failure of collective action},
 	number = {1683},
 	journal = {Philos Trans R Soc Lond B Biol Sci},
-	author = {von Rueden, Christopher R. and Gavrilets, Sergey and Glowacki, Luke},
+	author = {{von Rueden}, Christopher R. and Gavrilets, Sergey and Glowacki, Luke},
 	year = {2015},
 	pmcid = {PMC4633840},
 	keywords = {collective action, Cooperation, Leadership, prelims},
@@ -6944,7 +6960,7 @@ This article is part of the theme issue ‘Interdisciplinary approaches for unco
 	issn = {1048-9843},
 	doi = {10.1016/j.leaqua.2015.10.004},
 	journal = {The Leadership Quarterly},
-	author = {von Rueden, Christopher R. and Van Vugt, Mark},
+	author = {{von Rueden}, Christopher R. and Van Vugt, Mark},
 	year = {2015},
 	keywords = {Applied Psychology, Business and International Management, Jepson, Leadership, NSF1, Organizational Behavior and Human Resource Management, prelims, Sociology and Political Science},
 	pages = {978--990},
@@ -7519,7 +7535,7 @@ This article is part of the theme issue ‘Interdisciplinary approaches for unco
 	language = {en},
 	urldate = {2018-03-18},
 	journal = {Evolution and Human Behavior},
-	author = {von Rueden, Christopher R. and Alami, Sarah and Kaplan, Hillard and Gurven, Michael},
+	author = {{von Rueden}, Christopher R. and Alami, Sarah and Kaplan, Hillard and Gurven, Michael},
 	month = mar,
 	year = {2018},
 	file = {von Rueden et al. - 2018 - Sex differences in political leadership in an egal.pdf:/Users/hagen/Zotero/storage/7T4JPKZM/von Rueden et al. - 2018 - Sex differences in political leadership in an egal.pdf:application/pdf}
