Fixed a couple of typos. Commented out some packages

--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -104,14 +104,14 @@ Evolutionary theoretical models and empirical studies often seek to integrate fi
 
 ## Ethnographic sample and coding
 
-We evaluate the cross-cultural frequency in the functions and qualities of leaders and the costs and benefits of leadership for both leaders and followers using an ethnographic database previously built and published (doi.org/10.5281/zenodo.2541999), from which @garfield_evolutionary_2019 "tested" three theoretical models against the ethnographic record. Whereas @garfield_evolutionary_2019, documented supporting evidence in reference to influential theoretical models, our goals here are to let the ethnographic record speak for itself in understanding variation in the dimensions of leadership we are interested in, i.e., our methods and analyses are exploratory and not tricly theoretically driven. 
+We evaluate the cross-cultural frequency in the functions and qualities of leaders and the costs and benefits of leadership for both leaders and followers using an ethnographic database previously built and published (doi.org/10.5281/zenodo.2541999), from which @garfield_evolutionary_2019 "tested" three theoretical models against the ethnographic record. Whereas @garfield_evolutionary_2019, documented supporting evidence in reference to influential theoretical models, our goals here are to let the ethnographic record speak for itself in understanding variation in the dimensions of leadership we are interested in, i.e., our methods and analyses are exploratory and not strictly theoretically driven. 
 
 Here we draw on the same database of 1212 ethnographic paragraphs (termed text records) extracted from the 60-culture Probability Sample Files (PSF) of the electronic Human Relations Area Files (eHRAF) database [@naroll_proposed_1967]. The leadershipdata database was designed to capture a wide sample of the ethnographic record of leadership. For the current study, two authors coded each paragraph for presence of `r length(quality_vars)` distinct qualities of leaders, `r length(function_vars)` distinct functions leaders serve, and `r length(leader_benefit_vars)` benefits and `r length(leader_cost_vars)` costs that leaders or followers may receive. 
 
 
 The operationalized qualities and functions (See Table X) were developed from the ethnographic text records in the database. First ZG read a subset of text records and developed initial variable lists and operationalizations of the qualities and functions in those text records. Then, KS coded all 1212 text records (in a random order) for the operationalized qualities, functions, cost, and benefits, creating new variables and operationalizations for additional qualities and functions encountered. After coding half of the random sample KS and ZG revised the operational definitions to produce the final list of variables in Tables X. ZG then followed the same process of coding the entire sample of 1212 text records for the X operationalized variables. DISCUSS IRR. ZG and KS then discussed every instance of disagreement between their respective coding to produce a consensus matrix, which is used in the analyses here and added to the published data repository. 
 
-Coding operationalizations of the costs and benefits of leadership were eveloped *a priori* based on our reading of the evolutionary theoretical literature from anthropology and biology. For both followers and leaders, we code if there is evidence of costs or benefits in the following categories: social status/reputation, reduced or increased risk of harm or conflict, social services, territory, mating, fitness, food resources, other resources, and other costs or benefits not captured by these categories. See Table X. 
+Coding operationalizations of the costs and benefits of leadership were developed *a priori* based on our reading of the evolutionary theoretical literature from anthropology and biology. For both followers and leaders, we code if there is evidence of costs or benefits in the following categories: social status/reputation, reduced or increased risk of harm or conflict, social services, territory, mating, fitness, food resources, other resources, and other costs or benefits not captured by these categories. See Table X. 
 
 For additional details on ethnographic sampling and creating of the leadershipdata package see CITE. 
 
